# cob_driver

./: .codeclimate.yml  .gitignore  .travis.rosinstall  .travis.rosinstall.jade  .travis.rosinstall.kinetic  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README  README.md  all.tests  package.xml  rosdep.yaml  stack.xml
cob_base_drive_chain/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_base_drive_chain/common/src/: CanCtrlPltfCOb3.cpp  NeoCtrlPltfMpo500.cpp
cob_base_drive_chain/ros/include/: cob_base_drive_chain_param_loader.h
cob_base_drive_chain/ros/launch/: base_drive_chain.launch  cob_base_drive_chain.launch  pr2_controller_msgs_wrapper.launch
cob_base_drive_chain/ros/src/: base_drive_chain_sim.cpp  cob_base_drive_chain.cpp  cob_base_drive_chain_param_loader.cpp  cob_base_drive_chain_sim.cpp  pr2_controller_msgs_wrapper.cpp
cob_base_drive_chain/srv/: ElmoRecorderGet.srv  ElmoRecorderReadout.srv  ElmoRecorderSetup.srv  GetJointState.srv
cob_base_velocity_smoother/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_base_velocity_smoother/include/cob_base_velocity_smoother/: cob_base_velocity_smoother.h
cob_base_velocity_smoother/src/: cob_base_velocity_smoother.cpp
cob_bms_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_bms_driver/config/: config.yaml
cob_bms_driver/include/cob_bms_driver/: bms_parameter.h  cob_bms_driver_node.h
cob_bms_driver/src/: cob_bms_driver_node.cpp  fake_bms.py  power_state_aggregator.py  power_state_phidget.py
cob_cam3d_throttle/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml  package.xml
cob_cam3d_throttle/launch/: cam3d_throttle.launch
cob_cam3d_throttle/src/: cam3d_throttle.cpp
cob_camera_sensors/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  nodelet_plugins.xml  package.xml  readme.htm
cob_camera_sensors/common/scripts/: generateYAMLparameterFile.m
cob_camera_sensors/common/src/: AVTPikeCam.cpp  AbstractColorCamera.cpp  AbstractRangeImagingSensor.cpp  CameraSensorToolbox.cpp  StdAfx.cpp  Swissranger.cpp  VirtualColorCam.cpp  VirtualRangeCam.cpp
cob_camera_sensors/ros/launch/: all_camera_viewer.launch  all_cameras.launch  all_cameras_ros.launch  cam3d.launch  cam3d_all_robots.launch  cam3d_throttle.launch  camera_synchronizer.launch  cob3-1_all_cameras.launch  cob3-1_color_camera_left.launch  cob3-1_color_camera_right.launch  cob3-1_tof.launch  cob3-2_all_cameras.launch  cob3-2_color_cameras.launch  cob3-2_tof.launch  cob3-rack_all_cameras.launch  cob3-rack_color_camera_left.launch  cob3-rack_color_camera_right.launch  cob3-rack_tof.launch  cob3-sim_color_camera_left.launch  cob3-sim_tof.launch  kinect_cob3-3.yaml  left.launch  left.test  left_cob3-1.launch  left_cob3-1_640x480_rgb8_right.yaml  left_cob3-1_ros.launch  left_cob3-2.launch  left_desire_ros.launch  right.launch  right.test  right_cob3-1.launch  right_cob3-1_640x480_rgb8_tof.yaml  right_cob3-1_ros.launch  right_cob3-2.launch  right_cob3-3.yaml  right_desire_ros.launch  stream_prosilicas.launch  tof.launch  tof.test  tof_camera_viewer.launch  (+5 more)
cob_camera_sensors/ros/scripts/: arm_joint_configurations.yaml  calib_cam_neck_cob3-3.py  sdh_joint_configurations.yaml  set_camera_info.py  upload_param.launch
cob_camera_sensors/ros/src/: all_camera_viewer.cpp  all_cameras.cpp  cam3d_throttle.cpp  camera_synchronizer.cpp  color_camera.cpp  kinect_image_flip.cpp  tof_camera.cpp  tof_camera_viewer.cpp  undistort_tof.cpp
cob_camera_sensors/srv/: AcquireCalibrationImages.srv  GetTOFImages.srv
cob_canopen_motor/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
cob_canopen_motor/common/src/: CanDriveHarmonica.cpp  ElmoRecorder.cpp  StrUtil.cpp  TimeStamp.cpp  elmo_test.cpp
cob_collision_velocity_filter/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_collision_velocity_filter/cfg/: CollisionVelocityFilter.cfg  DynParam.cfg
cob_collision_velocity_filter/include/: cob_collision_velocity_filter.h  velocity_limited_marker.h
cob_collision_velocity_filter/ros/config/: collision_velocity_filter_params.yaml  footprint_observer_params.yaml  local_costmap_params.yaml
cob_collision_velocity_filter/ros/include/: cob_collision_velocity_filter.h
cob_collision_velocity_filter/ros/launch/: collision_velocity_filter.launch  local_costmap.launch
cob_collision_velocity_filter/ros/src/: cob_collision_velocity_filter.cpp
cob_collision_velocity_filter/src/: cob_collision_velocity_filter.cpp  velocity_limited_marker.cpp
cob_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_elmo_homing/: CHANGELOG.rst  CMakeLists.txt  canopen_402_plugin.xml  package.xml
cob_elmo_homing/src/: plugin.cpp
cob_footprint_observer/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_footprint_observer/include/: cob_footprint_observer.h
cob_footprint_observer/launch/: footprint_observer.launch
cob_footprint_observer/src/: cob_footprint_observer.cpp
cob_footprint_observer/srv/: GetFootprint.srv  SetFootprint.srv
cob_generic_can/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
cob_generic_can/common/src/: CANPeakSys2PCI.cpp  CANPeakSysDongle.cpp  CANPeakSysPCI.cpp  CANPeakSysUSB.cpp  CanESD.cpp  CanPeakSys.cpp  CanPeakSysUSB.cpp  SocketCan.cpp
cob_head_axis/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_head_axis/common/src/: ElmoCtrl.cpp
cob_head_axis/ros/launch/: camera_axis.launch  cob3-1.yaml  cob3-2.yaml  cob3-3.yaml  head_axis.launch  head_axis.test  solo.launch  (+1 more)
cob_hokuyo/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
cob_hwboard/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_hwboard/src/: cob_hwboard.py  hwboard.py
cob_light/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
cob_light/action/: SetLightMode.action
cob_light/msg/: ColorRGBAArray.msg  Light.msg  LightMode.msg  LightModes.msg  Sequence.msg
cob_light/src/: cob_light.py  test.py
cob_light/srv/: SetLightMode.srv  StopLightMode.srv
(+1008 files in other folders)
