<?xml version="1.0"?>
<package format="2">
  <name>cob_bms_driver</name>
  <version>0.0.0</version>
  <description>Driver package for interfacing the battery management system (BMS) on Care-O-bot.</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Luedtke</maintainer>
  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
  <author email="mig-mc@ipa.fhg.de">mig-mc</author>

  <license>private</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>socketcan_interface</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>


</package>
