<package format="2">
  <name>cob_base_drive_chain</name>
  <version>0.7.15</version>
  <description>This package contains classes that are able to control the platform of the Care-O-Bot. This means to establish a CAN communication to drive and steering motors of the platform and later send motion commands and receive motor information.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_base_drive_chain</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Christian Connette</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>cob_canopen_motor</depend>
  <depend>cob_generic_can</depend>
  <depend>cob_utilities</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

</package>
