<?xml version="1.0"?>
<package format="2">
  <name>cob_bms_driver</name>
  <version>0.6.10</version>
  <description>
    Driver package for interfacing the battery management system (BMS) on Care-O-bot.
  </description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</maintainer>
  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>
  <author email="mig-mc@ipa.fhg.de">mig-mc</author>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>
  <depend>std_msgs</depend>

  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>cob_srvs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
