<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_bms_driver</name>
  <version>0.7.16</version>
  <description>
    Driver package for interfacing the battery management system (BMS) on Care-O-bot.
  </description>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>

  <license>Apache 2.0</license>

  <author email="mig-mc@ipa.fhg.de">mig-mc</author>
  <author email="mathias.luedtke@ipa.fraunhofer.de">Mathias Lüdtke</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>socketcan_interface</depend>
  <depend>std_msgs</depend>

  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>cob_srvs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
