<package>
  <name>cob_cam3d_throttle</name>
  <version>0.5.3</version>
  <description>cob_cam3d_throttle: only for Trottel</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_cam3d_throttle</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="joshua.hampp@ipa.fhg.de">Joshua Hampp</maintainer>
  <author email="goa@ipa.fhg.de">Georg Arbeiter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nodelet</run_depend>
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>message_filters</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
