<package>
  <name>cob_camera_sensors</name>
  <version>0.5.3</version>
  <description>For more information read the readme.htm file located in</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_camera_sensors</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer> 
  <author email="jsf@ipa.fhg.de">Jan Fischer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_msgs</run_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>nodelet</run_depend>

  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>pluginlib</test_depend> -->
  <!-- <test_depend>message_filters</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->

  <export>

  </export>
</package>
