<package format="2">
  <name>cob_camera_sensors</name>
  <version>0.6.10</version>
  <description>For more information read the readme.htm file located in</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_camera_sensors</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer>
  <author email="jsf@ipa.fhg.de">Jan Fischer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>cob_vision_utils</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>message_filters</depend>
  <depend>polled_camera</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rospy</exec_depend>

</package>
