<package>
  <name>cob_canopen_motor</name>
  <version>0.5.3</version>
  <description>The package cob_canopen_motor implements a controller-drive component which is connected to a can-bus and works with a canopen-interface. "CanDriveItf" provides a - more or less - generic interface to the controller-drive components. "CanDrvie..." then implements a specific setup, e.g. an ELMO Harmonica Controller in case of the "CanDriveHarmonica".</description>
  <!--  -->

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_canopen_motor</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Christian Connette</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cob_generic_can</build_depend>
  <build_depend>cob_utilities</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cob_generic_can</run_depend>
  <run_depend>cob_utilities</run_depend>
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>cob_generic_can</test_depend> -->
  <!-- <test_depend>cob_utilities</test_depend> -->

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/common/lib -L${prefix}/common/lib -lcob_canopen_motor_harmonica" cflags="-I${prefix}/common/include"/>
  </export>
</package>
