<package format="2">
  <name>cob_canopen_motor</name>
  <version>0.7.16</version>
  <description>The package cob_canopen_motor implements a controller-drive component which is connected to a can-bus and works with a canopen-interface. "CanDriveItf" provides a - more or less - generic interface to the controller-drive components. "CanDrvie..." then implements a specific setup, e.g. an ELMO Harmonica Controller in case of the "CanDriveHarmonica".</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_canopen_motor</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mig@ipa.fhg.de">Matthias Gruhler</maintainer>
  <author>Christian Connette</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cob_generic_can</depend>
  <depend>cob_utilities</depend>
  <depend>roscpp</depend>

</package>
